--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/ewallet
 spring.datasource.username=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
+
+jwt.secret=WkE5r8@vY!u$1#cM3pNzLx0QqT6dUvK9
+jwt.expiration=900
+refresh.jwt.expiration=604800
